fixed text-decoration on safari

--- a/style.scss
+++ b/style.scss
@@ -259,6 +259,7 @@ nav {
 
 article .entry a, article .post a, article .page a {
   text-decoration: underline dotted $red;
+  -webkit-text-decoration: underline dotted $red;
 }
 
 .wrapper-footer {
